trunk/Archive2/01/4e4deefd19a08c/output
+ clang++ -std=c++11 -Wall -Wextra -pedantic-errors -O3 -g -pthread main.cpp
main.cpp:85:10: error: use of undeclared identifier 'firstNode'
                return firstNode->value;
                       ^
1 error generated.
